fixed the header even more so the team names and score are 100% height and they are never unaligned

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,8 +75,10 @@ body {
 }
 
 .headerTeam {
+  padding: 15px;
   text-align: center;
-  font-size: 150%;
+  font-size: 125%;
+  height: 100%;
 }
 
 .period {
@@ -96,7 +98,10 @@ body {
 }
 
 .headerScore {
+  display: flex;
+  align-items: center;
   font-size: 350%;
+  height: 100%;
 }
 
 /* Stats Column on Homepage and Selected Games Page */
@@ -165,6 +170,7 @@ body {
   text-align: center;
 }
 
+/* All Games Page Styling */
 #allGames {
   overflow-y: scroll;
   display: flex;
@@ -219,6 +225,7 @@ body {
   padding-right: 10px;
 }
 
+/* Media Queries For Page Responsiveness */
 @media screen and (max-width: 320px) {
   #navbarText{
     padding: 0;
